--- a/service-api-documentation.html
+++ b/service-api-documentation.html
@@ -963,6 +963,14 @@ URL: index.php?controller=claims&amp;action=create</p>
 <td>image</td>
 <td>string</td>
 </tr>
+<tr>
+<td>period</td>
+<td>string</td>
+</tr>
+<tr>
+<td>description</td>
+<td>string</td>
+</tr>
 </tbody></table>
 
 <h3>File Data</h3>
